<resources>
    <string name="app_name">FitApp</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="password2">Confirm Password</string>
    <string name="already_registered">Already Registered? </string>
    <string name="login_here">Login Here</string>
    <string name="logout">Logout</string>
</resources>